--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node graphql-lego/app/index.js",
+    "dev": "nodemon graphql-lego/app/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/PierreBeaufils/graphql-test#readme",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "graphql-yoga": "^1.18.3"
   }
 }
