--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "graphql-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "graphql-lego/app/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node graphql-lego/app/index.js",
-    "dev": "nodemon graphql-lego/app/index.js"
+    "start": "node graphql-lego/app/server.js",
+    "dev": "nodemon graphql-lego/app/server.js"
   },
   "repository": {
     "type": "git",
